--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       </header>
     </div>
 
+    <form class="resumeForm">
+      <span class="resumeFormFieldHolder"> <label><b>Full Name</b></label> <input /> </span>
+      <span class="resumeFormFieldHolder"> <label>Full Name</label> <input /> </span>
+      <span class="resumeFormFieldHolder"> <label>Full Name</label> <input /> </span>
+    </form>
   </body>
 
 </html>
